# RPCProject

./: .gitignore  CMakeLists.txt  ClientMain.c  Makefile  README.md  RPC.c  RPC.h  RPCClient.c  RPCClient.h  RPCClientImpl.c  RPCCommon.h  RPCDevice.c  RPCDevice.h  RPCDeviceExample.c  RPCHost.c  RPCHost.h  RPCHostExample.c  RPCImpl.c  RPCImpl.h  RPCServerImpl.c  RPCThreadHandler.c  RPCThreadHandler.h  ServerMain.c  client.c  node.c  node.h  queue.c  queue.h  server.c  wrappers.c  wrappers.h
Common/: node.h  queue.h
Common/Impl/: node.c  queue.c
Device/: RPCDeviceExample.c
DeviceLib/Impl/: RPCDevice.c
Examples/Device/: RPCDeviceExample.c
Examples/Host/: RPCHostExample.c
Host/: Makefile  RPCHost.c  RPCHostExample.c
HostLib/: RPCHost.h
HostLib/Impl/: RPCHost.c
